{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 64,
  "lineage": "e5cfe12e-a99f-449b-6f87-580a79bd9c58",
  "resources": [
    {
      "module": "module.createvm[\"azpoe-latency01-vm\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e88d6c03-6eac-46a7-8040-8919b23accf8/resourceGroups/azpoe-latency-rg/providers/Microsoft.Network/networkInterfaces/azpoe-latency01-nic-nic",
            "internal_domain_name_suffix": "a4l5r4rvoanudp1ztc3x21qavg.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "azpoe-latency01-nic-nic-config",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e88d6c03-6eac-46a7-8040-8919b23accf8/resourceGroups/azpoe-latency-rg/providers/Microsoft.Network/publicIPAddresses/azpoe-latency01-pip",
                "subnet_id": "/subscriptions/e88d6c03-6eac-46a7-8040-8919b23accf8/resourceGroups/azpoe-latency-rg/providers/Microsoft.Network/virtualNetworks/azpoe-latency01-vnet-vnet/subnets/azpoe-latency01-subnet-subnet"
              }
            ],
            "location": "westeurope",
            "name": "azpoe-latency01-nic-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "azpoe-latency-rg"
          },
          "dependencies": [
            "module.createvm.azurerm_public_ip.public_ip",
            "module.createvm.azurerm_subnet.subnet",
            "module.createvm.azurerm_virtual_network.vnet",
            "module.createvm.data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.createvm[\"azpoe-latency01-vm\"]",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e88d6c03-6eac-46a7-8040-8919b23accf8/resourceGroups/azpoe-latency-rg/providers/Microsoft.Network/networkInterfaces/azpoe-latency01-nic-nic|/subscriptions/e88d6c03-6eac-46a7-8040-8919b23accf8/resourceGroups/azpoe-latency-rg/providers/Microsoft.Network/networkSecurityGroups/azpoe-nsg01-nsg",
            "network_interface_id": "/subscriptions/e88d6c03-6eac-46a7-8040-8919b23accf8/resourceGroups/azpoe-latency-rg/providers/Microsoft.Network/networkInterfaces/azpoe-latency01-nic-nic",
            "network_security_group_id": "/subscriptions/e88d6c03-6eac-46a7-8040-8919b23accf8/resourceGroups/azpoe-latency-rg/providers/Microsoft.Network/networkSecurityGroups/azpoe-nsg01-nsg"
          },
          "dependencies": [
            "module.createvm.azurerm_network_interface.nic",
            "module.createvm.azurerm_network_security_group.nsg",
            "module.createvm.azurerm_public_ip.public_ip",
            "module.createvm.azurerm_subnet.subnet",
            "module.createvm.azurerm_virtual_network.vnet",
            "module.createvm.data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.createvm[\"azpoe-latency01-vm\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e88d6c03-6eac-46a7-8040-8919b23accf8/resourceGroups/azpoe-latency-rg/providers/Microsoft.Network/networkSecurityGroups/azpoe-nsg01-nsg",
            "location": "westeurope",
            "name": "azpoe-nsg01-nsg",
            "resource_group_name": "azpoe-latency-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 310,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "9000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "CutomPortchange",
                "priority": 330,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.createvm.data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.createvm[\"azpoe-latency01-vm\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e88d6c03-6eac-46a7-8040-8919b23accf8/resourceGroups/azpoe-latency-rg/providers/Microsoft.Network/publicIPAddresses/azpoe-latency01-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.56.51.89",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "azpoe-latency01-pip",
            "resource_group_name": "azpoe-latency-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "zones": [
              "1"
            ]
          },
          "dependencies": [
            "module.createvm.data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.createvm[\"azpoe-latency01-vm\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e88d6c03-6eac-46a7-8040-8919b23accf8/resourceGroups/azpoe-latency-rg/providers/Microsoft.Network/virtualNetworks/azpoe-latency01-vnet-vnet/subnets/azpoe-latency01-subnet-subnet",
            "name": "azpoe-latency01-subnet-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "azpoe-latency-rg",
            "virtual_network_name": "azpoe-latency01-vnet-vnet"
          },
          "dependencies": [
            "module.createvm.azurerm_virtual_network.vnet",
            "module.createvm.data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.createvm[\"azpoe-latency01-vm\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "faf89707-7035-411b-bf79-98bb7e6e00ae",
            "id": "/subscriptions/e88d6c03-6eac-46a7-8040-8919b23accf8/resourceGroups/azpoe-latency-rg/providers/Microsoft.Network/virtualNetworks/azpoe-latency01-vnet-vnet",
            "location": "westeurope",
            "name": "azpoe-latency01-vnet-vnet",
            "resource_group_name": "azpoe-latency-rg"
          },
          "dependencies": [
            "module.createvm.data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.createvm[\"azpoe-latency02-vm\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e88d6c03-6eac-46a7-8040-8919b23accf8/resourceGroups/azpoe-latency-rg/providers/Microsoft.Network/networkInterfaces/azpoe-latency02-nic-nic",
            "internal_domain_name_suffix": "giu4gtrilp1uhpr3fi2oxk5w5g.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "azpoe-latency02-nic-nic-config",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e88d6c03-6eac-46a7-8040-8919b23accf8/resourceGroups/azpoe-latency-rg/providers/Microsoft.Network/publicIPAddresses/azpoe-latency02-pip",
                "subnet_id": "/subscriptions/e88d6c03-6eac-46a7-8040-8919b23accf8/resourceGroups/azpoe-latency-rg/providers/Microsoft.Network/virtualNetworks/azpoe-latency02-vnet-vnet/subnets/azpoe-latency02-subnet-subnet"
              }
            ],
            "location": "westeurope",
            "name": "azpoe-latency02-nic-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "azpoe-latency-rg"
          },
          "dependencies": [
            "module.createvm.azurerm_public_ip.public_ip",
            "module.createvm.azurerm_subnet.subnet",
            "module.createvm.azurerm_virtual_network.vnet",
            "module.createvm.data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.createvm[\"azpoe-latency02-vm\"]",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e88d6c03-6eac-46a7-8040-8919b23accf8/resourceGroups/azpoe-latency-rg/providers/Microsoft.Network/networkInterfaces/azpoe-latency02-nic-nic|/subscriptions/e88d6c03-6eac-46a7-8040-8919b23accf8/resourceGroups/azpoe-latency-rg/providers/Microsoft.Network/networkSecurityGroups/azpoe-nsg02-nsg",
            "network_interface_id": "/subscriptions/e88d6c03-6eac-46a7-8040-8919b23accf8/resourceGroups/azpoe-latency-rg/providers/Microsoft.Network/networkInterfaces/azpoe-latency02-nic-nic",
            "network_security_group_id": "/subscriptions/e88d6c03-6eac-46a7-8040-8919b23accf8/resourceGroups/azpoe-latency-rg/providers/Microsoft.Network/networkSecurityGroups/azpoe-nsg02-nsg"
          },
          "dependencies": [
            "module.createvm.azurerm_network_interface.nic",
            "module.createvm.azurerm_network_security_group.nsg",
            "module.createvm.azurerm_public_ip.public_ip",
            "module.createvm.azurerm_subnet.subnet",
            "module.createvm.azurerm_virtual_network.vnet",
            "module.createvm.data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.createvm[\"azpoe-latency02-vm\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e88d6c03-6eac-46a7-8040-8919b23accf8/resourceGroups/azpoe-latency-rg/providers/Microsoft.Network/networkSecurityGroups/azpoe-nsg02-nsg",
            "location": "westeurope",
            "name": "azpoe-nsg02-nsg",
            "resource_group_name": "azpoe-latency-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 310,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "9000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "CutomPortchange",
                "priority": 330,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.createvm.data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.createvm[\"azpoe-latency02-vm\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e88d6c03-6eac-46a7-8040-8919b23accf8/resourceGroups/azpoe-latency-rg/providers/Microsoft.Network/publicIPAddresses/azpoe-latency02-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.124.186.67",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "azpoe-latency02-pip",
            "resource_group_name": "azpoe-latency-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "zones": [
              "2"
            ]
          },
          "dependencies": [
            "module.createvm.data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.createvm[\"azpoe-latency02-vm\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e88d6c03-6eac-46a7-8040-8919b23accf8/resourceGroups/azpoe-latency-rg/providers/Microsoft.Network/virtualNetworks/azpoe-latency02-vnet-vnet/subnets/azpoe-latency02-subnet-subnet",
            "name": "azpoe-latency02-subnet-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "azpoe-latency-rg",
            "virtual_network_name": "azpoe-latency02-vnet-vnet"
          },
          "dependencies": [
            "module.createvm.azurerm_virtual_network.vnet",
            "module.createvm.data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.createvm[\"azpoe-latency02-vm\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4ee32932-5b28-43f7-be3d-2a38ebabf6fe",
            "id": "/subscriptions/e88d6c03-6eac-46a7-8040-8919b23accf8/resourceGroups/azpoe-latency-rg/providers/Microsoft.Network/virtualNetworks/azpoe-latency02-vnet-vnet",
            "location": "westeurope",
            "name": "azpoe-latency02-vnet-vnet",
            "resource_group_name": "azpoe-latency-rg"
          },
          "dependencies": [
            "module.createvm.data.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}